# autopilot

./: .gitignore  CLAUDE.md  Dockerfile  FEATURE_RECOMMENDATIONS.md  Procfile.dev  README.md  pyproject.toml
.github/workflows/: ci.yml
automations/: example.toml
automations/example/: config.toml
src/ai_automations/: __main__.py  cli.py  config.py  prompts.py  results.py  scheduler.py  shell.py  skills.py  state.py  worktree.py
src/ai_automations/backends/: __init__.py  base.py  claude_cli.py  claude_sdk.py  codex_cli.py  gemini_cli.py  openai_agents_sdk.py
src/ai_automations/channels/: __init__.py  base.py  slack.py
src/autopilot/: __init__.py  __main__.py  cli.py  conditions.py  config.py  costs.py  health.py  models.py  prompts.py  repos.py  results.py  scheduler.py  shell.py  simulate.py  skills.py  worktree.py
src/autopilot/api/: app.py  routes_automations.py  routes_health.py  routes_results.py  routes_webhooks.py
src/autopilot/backends/: __init__.py  base.py  claude_cli.py  claude_sdk.py  codex_cli.py  gemini_cli.py  openai_agents_sdk.py
tests/: conftest.py  test_api_automations.py  test_api_health.py  test_api_results.py  test_api_webhooks.py  test_backends.py  test_channels.py  test_cli.py  test_conditions.py  test_config.py  test_costs.py  test_health.py  test_models.py  test_prompts.py  test_repos.py  test_results.py  test_scheduler.py  test_scheduler_class.py  test_shell.py  test_simulate.py  test_skills.py  test_state.py  test_worktree.py
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx
(+21 files in other folders)
